--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -12,10 +12,23 @@ Term Project Report}
 
 \doublespacing
 
+
 \section{Summary}
+In this project, we attempted to build models predicting population density based on satellite imagery. We achieve this by comparing spatially disaggregated census data on the continental United States (that is excluding Alaska and U.S. territories) to satellite images of the particular region. We use several approaches: 
+\begin{itemize}
+\item[(1)] naive logistic regression on the vectorized satellite images; 
+\item[(2)] convolutional neural network(CNN) built from scratch; \item[(3)] pretrained CNN developed for image recognition (Vgg16).
+\end{itemize}
+
+While our models do not achieve particularly high accuracy, they show considerable lift corresponding to random guessing. Perhaps not surprisingly, the pre-trained neural network showed the best performance of achieving $62\%$ accuracy.
+
 \section{Business understanding}
-\section{Data understanding}
-\section{Data preparation}
+
+
+\section{Data}
+\subsection{Data understanding}
+
+\subsection{Data preparation}
 \section{Modeling and evaluation}
 \subsection{Logistic regression}
 \subsection{CNN from scratch}
