--- a/Prediction with VGG.ipynb
+++ b/Prediction with VGG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 175,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 174,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 176,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 177,
    "metadata": {
     "collapsed": false
    },
@@ -55,13 +55,13 @@
    "source": [
     "for entry in np.nditer(df.as_matrix()):\n",
     "    for cl in classes:\n",
-    "        if (entry > cl[0]) and (entry <= cl[1]):\n",
+    "        if (entry >= cl[0]) and (entry <= cl[1]):\n",
     "            counts[cl] += 1    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
@@ -69,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "(0, 1)            110\n",
+       "(0, 1)            154\n",
        "(1, 10)           782\n",
        "(10, 50)         2813\n",
        "(50, 100)         908\n",
@@ -80,7 +80,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,42 +508,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 5560 images belonging to 8 classes.\n",
+      "Found 1440 images belonging to 8 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "vgg2 = Vgg16()\n",
-    "vgg2.model.pop()\n",
-    "for layer in vgg2.model.layers: layer.trainable=False\n",
-    "vgg2.model.add(Dense(8, activation='softmax'))\n",
-    "vgg2.model.layers[-3].trainable = True"
+    "batches = vgg2.get_batches(traindir, batch_size=batch_size)\n",
+    "val_batches = vgg2.get_batches(testdir, batch_size=batch_size)\n",
+    "vgg2.finetune(batches)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def fit_model(model, batches, val_batches, nb_epoch=1):\n",
-    "    model.fit_generator(batches, samples_per_epoch=batches.n, nb_epoch=nb_epoch, \n",
-    "                        validation_data=val_batches, nb_val_samples=val_batches.n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 172,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      "5560/5560 [==============================] - 1388s - loss: 1.9325 - acc: 0.4336 - val_loss: 1.0808 - val_acc: 0.6042\n"
+     ]
+    }
+   ],
    "source": [
-    "opt = Adam(lr=0.1)\n",
-    "model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])"
+    "vgg2.fit(batches, test_batches, nb_epoch=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "____________________________________________________________________________________________________\n",
+      "Layer (type)                     Output Shape          Param #     Connected to                     \n",
+      "====================================================================================================\n",
+      "lambda_15 (Lambda)               (None, 3, 224, 224)   0           lambda_input_15[0][0]            \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_183 (ZeroPadding2D (None, 3, 226, 226)   0           lambda_15[0][0]                  \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_183 (Convolution2D (None, 64, 224, 224)  1792        zeropadding2d_183[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_184 (ZeroPadding2D (None, 64, 226, 226)  0           convolution2d_183[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_184 (Convolution2D (None, 64, 224, 224)  36928       zeropadding2d_184[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "maxpooling2d_71 (MaxPooling2D)   (None, 64, 112, 112)  0           convolution2d_184[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_185 (ZeroPadding2D (None, 64, 114, 114)  0           maxpooling2d_71[0][0]            \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_185 (Convolution2D (None, 128, 112, 112) 73856       zeropadding2d_185[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_186 (ZeroPadding2D (None, 128, 114, 114) 0           convolution2d_185[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_186 (Convolution2D (None, 128, 112, 112) 147584      zeropadding2d_186[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "maxpooling2d_72 (MaxPooling2D)   (None, 128, 56, 56)   0           convolution2d_186[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_187 (ZeroPadding2D (None, 128, 58, 58)   0           maxpooling2d_72[0][0]            \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_187 (Convolution2D (None, 256, 56, 56)   295168      zeropadding2d_187[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_188 (ZeroPadding2D (None, 256, 58, 58)   0           convolution2d_187[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_188 (Convolution2D (None, 256, 56, 56)   590080      zeropadding2d_188[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_189 (ZeroPadding2D (None, 256, 58, 58)   0           convolution2d_188[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_189 (Convolution2D (None, 256, 56, 56)   590080      zeropadding2d_189[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "maxpooling2d_73 (MaxPooling2D)   (None, 256, 28, 28)   0           convolution2d_189[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_190 (ZeroPadding2D (None, 256, 30, 30)   0           maxpooling2d_73[0][0]            \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_190 (Convolution2D (None, 512, 28, 28)   1180160     zeropadding2d_190[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_191 (ZeroPadding2D (None, 512, 30, 30)   0           convolution2d_190[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_191 (Convolution2D (None, 512, 28, 28)   2359808     zeropadding2d_191[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_192 (ZeroPadding2D (None, 512, 30, 30)   0           convolution2d_191[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_192 (Convolution2D (None, 512, 28, 28)   2359808     zeropadding2d_192[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "maxpooling2d_74 (MaxPooling2D)   (None, 512, 14, 14)   0           convolution2d_192[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_193 (ZeroPadding2D (None, 512, 16, 16)   0           maxpooling2d_74[0][0]            \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_193 (Convolution2D (None, 512, 14, 14)   2359808     zeropadding2d_193[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_194 (ZeroPadding2D (None, 512, 16, 16)   0           convolution2d_193[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_194 (Convolution2D (None, 512, 14, 14)   2359808     zeropadding2d_194[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "zeropadding2d_195 (ZeroPadding2D (None, 512, 16, 16)   0           convolution2d_194[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "convolution2d_195 (Convolution2D (None, 512, 14, 14)   2359808     zeropadding2d_195[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "maxpooling2d_75 (MaxPooling2D)   (None, 512, 7, 7)     0           convolution2d_195[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "flatten_15 (Flatten)             (None, 25088)         0           maxpooling2d_75[0][0]            \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_55 (Dense)                 (None, 4096)          102764544   flatten_15[0][0]                 \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_29 (Dropout)             (None, 4096)          0           dense_55[0][0]                   \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_56 (Dense)                 (None, 4096)          16781312    dropout_29[0][0]                 \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_30 (Dropout)             (None, 4096)          0           dense_56[0][0]                   \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_58 (Dense)                 (None, 8)             32776       dropout_30[0][0]                 \n",
+      "====================================================================================================\n",
+      "Total params: 134,293,320\n",
+      "Trainable params: 16,814,088\n",
+      "Non-trainable params: 117,479,232\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "vgg2.model.layers[-3].trainable = True\n",
+    "vgg2.model.summary()"
    ]
   },
   {
@@ -557,13 +662,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      " 400/5560 [=>............................] - ETA: 971s - loss: 10.0335 - acc: 0.3775"
+      "Epoch 1/30\n"
      ]
     }
    ],
    "source": [
-    "fit_model(model, batches, val_batches, nb_epoch=20)"
+    "vgg2.fit(batches, test_batches, nb_epoch=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "val_data = get_data(testdir)\n",
+    "val_classes = val_batches.classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "val_pred_scores = vgg2.model.predict(val_data, batch_size=batch_size, verbose = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "val_prediction = [val_pred_scores[i].argmax() for i in range(len(val_pred_scores))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(val_classes, val_prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plot_confusion_matrix(cm, val_batches.class_indices, normalize = False)"
    ]
   },
   {
